--- a/client/src/assets/scss/custom/structure/_left-menu.scss
+++ b/client/src/assets/scss/custom/structure/_left-menu.scss
@@ -3,6 +3,27 @@
 //
 
 // Logo
+
+@mixin button-shadow($color) {
+    box-shadow: $btn-box-shadow rgba($color, 0.5);
+}
+
+@mixin badge-variant-light($bg) {
+    color: $bg;
+    background-color: rgba($bg, 0.18);
+  }
+  
+  // Outline badge
+  
+  @mixin badge-variant-outline($bg) {
+    color: $bg;
+    border: 1px solid $bg;
+    background-color: transparent;
+  }
+
+  @mixin bg-variant-light($color) {
+    background-color: rgba($color, 0.25) !important;
+}
 .logo {
     display: block;
     line-height: $topbar-height;
