--- a/client/src/assets/scss/app-creative.scss
+++ b/client/src/assets/scss/app-creative.scss
@@ -7,17 +7,21 @@ File: Main Css File
 */
 
 //Core files
+@import "../../../node_modules/bootstrap/scss/_functions";
 
-@import "./node_modules/bootstrap/scss/functions";
-@import "./node_modules/bootstrap/scss/variables";
+@import "../../../node_modules/bootstrap/scss/_variables";
+// @import "./node_modules/bootstrap/scss/functions";
+// @import "./node_modules/bootstrap/scss/variables";
 @import "config/creative/variables";
 
 @import "./config/creative/light-mode";
 @import "./config/creative/dark-mode";
 @import "config/creative/custom-variables";
 
-@import "./node_modules/bootstrap/scss/bootstrap";
+// @import "./node_modules/bootstrap/scss/bootstrap";
+@import "../../../node_modules/bootstrap/scss/bootstrap.scss";
 
+@import "custom/components/mixins";
 // Structure
 @import "custom/structure/general";
 @import "custom/structure/left-menu";
@@ -32,7 +36,6 @@ File: Main Css File
 @import "custom/fonts/nunito";
 
 //Components
-@import "custom/components/mixins";
 @import "custom/components/accordions";
 @import "custom/components/alert";
 @import "custom/components/avatar";
