--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -8,15 +8,18 @@ File: Main Css File
 
 //Core files
 
-@import "./node_modules/bootstrap/scss/functions";
-@import "./node_modules/bootstrap/scss/variables";
+// @import "./node_modules/bootstrap/scss/functions";
+@import "../../../node_modules/bootstrap/scss/_functions";
+// @import "./node_modules/bootstrap/scss/variables";
+@import "../../../node_modules/bootstrap/scss/_variables";
 @import "config/saas/variables";
 
 @import "./config/saas/light-mode";
 @import "./config/saas/dark-mode";
 @import "config/saas/custom-variables";
 
-@import "./node_modules/bootstrap/scss/bootstrap";
+// @import "./node_modules/bootstrap/scss/bootstrap";
+@import "../../../node_modules/bootstrap/scss/bootstrap.scss";
 
 // Structure
 @import "custom/structure/general";
